[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "comfyui-prompt-builder"
version = "1.0.0"
authors = [
  { name = "tudoupaigu946" }
]
description = "A prompt management plugin for Chinese models like Qwen and Z-Image"
long_description = "Prompt management plugin for Chinese image models, supports category selection, random generation, NSFW options."
long_description_content_type = "text/markdown"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
requires-python = ">=3.10"

dependencies = [
]

[project.urls]
Repository = "https://github.com/tudoupaigu946/prompt_builder"

[comfyui]
publisher_id = "tudoupaigu946"
display_name = "中文提示词随机插件"
node_prefix = "prompt/"
category = "Custom"