
[project]
name = "prompt-builder"
version = "1.0.1"
description = "A prompt management plugin for Chinese models like Qwen and Z-Image"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "comfyui-frontend-package<=1.21.6"  # 前端版本兼容性
]
classifiers = [
    "Operating System :: OS Independent"  # 适用于所有操作系统
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/tudoupaigu946/prompt_builder"
Documentation = "https://github.com/tudoupaigu946/prompt_builder/wiki"
"Bug Tracker" = "https://github.com/tudoupaigu946/prompt_builder/issues"

[tool.comfy]
PublisherId = "tudoupaigu946"
DisplayName = "Prompt Builder"
requires-comfyui = ">=1.0.0"  # ComfyUI 版本兼容性